--- a/requirements.txt
+++ b/requirements.txt
@@ -20,12 +20,8 @@ decorator==4.4.1
 defusedxml==0.6.0
 diff-match-patch==20200713
 dj-database-url==0.5.0
-Django==3.1.6
-django-allauth==0.45.0
-django-anymail==7.0.0
+Django
 django-appconf==1.0.4
-django-autoslug==1.9.8
-django-autoslug-iplweb==1.9.4.dev0
 django-cities-light==3.8.1
 django-countries==7.2.1
 django-coverage-plugin==1.6.0
